--- a/etc/html/style.css
+++ b/etc/html/style.css
@@ -7,7 +7,7 @@ canvas {
 	background: #FFFFFF url('play-ttd.jpeg') no-repeat center center;
 	border: 1px solid black;
 	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25);
-	margin: 30px; 
+	margin: 30px 30px 30px 30px; 
 	width: 800px;
 	height: 600px;
 }
