--- a/etc/html/style.css
+++ b/etc/html/style.css
@@ -3,13 +3,46 @@ body {
 	background: #a0cef0 url('http://img.4geo.ru/personal_page/air/background13.jpg') no-repeat right top;
 }
 
+table {
+	border: 0px;
+}
+
 canvas { 
 	background: #FFFFFF url('play-ttd.jpeg') no-repeat center center;
 	border: 1px solid black;
 	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25);
-	margin: 30px 30px 30px 30px; 
+	margin-top: 30px;
+}
+
+.no-cursor {
+	cursor: none;
+}
+
+.big-width {
+	width: 960px;
+}
+
+.big {
+	width: 960px;
+	height: 720px;	
+}
+
+.medium-width {
 	width: 800px;
-	height: 600px;
+}
+
+.medium {
+	width: 800px;
+	height: 600px;		
+}
+
+.small-width {
+	width: 640px;
+}
+
+.small {
+	width: 640px;
+	height: 480px;
 }
 
 textarea { 
