--- a/etc/html/css/style.css
+++ b/etc/html/css/style.css
@@ -40,7 +40,13 @@ canvas {
 	margin: 120px 20px 0px 20px; 
 }
 
-.teaser span {
+.teaser .teaser-note {
+	color: #333;
+	font-size: 12px;
+	display: none;
+}
+
+.teaser .teaser-text {
 	display: block;
 	font-size:14px;
 	margin-top: 10px;
@@ -70,6 +76,16 @@ div {
 	margin-top: 30px;
 }
 
+.fps {
+	background: rgba(255, 255, 255, 0.8);
+	color: #000000;
+	padding: 10px;
+	border-radius: 10px;
+	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25);
+	width: 120px;
+	margin-top: 30px;
+}
+
 .copyright {
 	font-size: 0.8em;
 }
@@ -87,6 +103,7 @@ div {
     cursor: pointer;
     font-family: verdana,sans-serif;
     text-decoration: none;
+    font-weight: bold;
 }
 
 .green {
