--- a/etc/html/css/style.css
+++ b/etc/html/css/style.css
@@ -8,10 +8,10 @@ table {
 }
 
 canvas { 
+/*	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25); */
 	background: #393a3e;
+	margin-top: 30px; 
 	border: 1px solid black;
-	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25);
-	margin-top: 30px;
 	display: none;
 }
 
