--- a/etc/html/css/jukebox/jukebox.css
+++ b/etc/html/css/jukebox/jukebox.css
@@ -1,6 +1,6 @@
 body {
 	font: 1em Verdana,sans-serif;
-	background: #CECECE url('../../img/background_2.jpg') no-repeat left top;
+	background: #c4cdca url('../../evolution/img/big_optimal.png') no-repeat right bottom;
 }
 
 .jukebox {
