--- a/etc/html/css/style.css
+++ b/etc/html/css/style.css
@@ -1,18 +1,11 @@
 body {
 	font: 1em Verdana,sans-serif;
-	background: #a0cef0 url('../img/background.jpg') no-repeat right top;
-}
-
-table {
-	border: 0px;
+	background: #c4cdca;
 }
 
 canvas { 
-/*	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25); */
 	background: #393a3e;
-	margin-top: 30px; 
 	border: 1px solid black;
-	display: none;
 }
 
 .teaser {
@@ -66,14 +59,26 @@ div {
 }
 
 .loader {
+	position: absolute;
 	background: #301D10;
 	color: #FFFFE5;
 	padding: 10px;
 	border-radius: 10px;
 	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25);
 	text-shadow: 0 1px 0 black, 0 2px 0 black;
-	width: 700px;
 	margin-top: 30px;
+	margin-left: 30px;
+}
+
+.loader-2 {
+	background: #301D10;
+	color: #FFFFE5;
+	padding: 10px;
+	border-radius: 10px;
+	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5), inset 0 0 40px rgba(0, 0, 0, 0.25);
+	text-shadow: 0 1px 0 black, 0 2px 0 black;
+	margin-top: 30px;
+	width: 640px;
 }
 
 .fps {
