--- a/etc/html/evolution/css/style.css
+++ b/etc/html/evolution/css/style.css
@@ -1,34 +1,23 @@
 body {
 	font: 1em Verdana,sans-serif;
-	background: #000;
+	background: #c4cdca;
 	margin: 0px;
 	padding: 0px;
 }
 
 .content-container {
-	/*background: #bc0000;*/
-	background: #c4cdca;
+	background: #000;
+	padding-top: 17px;
 	width: 100%;
-	
-	position: absolute;
-	left: 0px;
-	top: 17px;
-	bottom: 0px;
-	right: 0px;
 }
 
 .content {
 	background: #c4cdca url('../img/big_optimal.png') no-repeat right bottom;
-	position: absolute;
 	width: 100%;
-	right: 0px;
-	top: 0px;
-	bottom: 134px;
 }
 
 .content .left {
 	background: rgba(196, 205, 202, 0.5);
-	margin-top: 20px;
 	margin-left: 12%;
 	margin-right: 12%;
 	padding: 5px;
@@ -38,17 +27,15 @@ body {
 	background: #000;
 	width: 100%;
 	height: 136px;
-	position: absolute;
-	bottom: 17px;
-	color: white;
+	color: #FFF;
 }
 
 .contact-container a {
 	font-size: 0.9em;
-	color: #AAA;
 	text-decoration: none;
 	line-height: 150%;
 	text-decoration: underline;
+	color: #AAA;
 }
 
 .contact-container a:hover {
@@ -93,33 +80,39 @@ body {
 
 
 .menu {
-	margin: 60px 40px 40px 40px;
+	margin: 40px 40px 40px 40px;
+}
+
+.cover h3 {
+	color: #b31915;
+}
+
+.cover-list {
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+.screenshot {
+	float: right;
+	background: url('http://media.openttd.org/images/screens/0.4.8/desert_junction_thumb.png') no-repeat;
+	width: 240px;
+	height: 184px;
+	text-align: center;
+	font-size: 0.7em;
+	color: #222;
+	border-radius: 5px 5px 5px 5px;
+    border: 1px solid rgb(170, 170, 170);
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.4) inset, 0px 5px 5px rgba(0, 0, 0, 0.2);
+    margin-left: 20px;
 }
 
 .controls {
-	float: left;
 	padding-top: 5px;
-	padding-left: 40px;
 	font-size: 1.2em;
 }
 
 .controls a {
-	display: block;
-	margin-bottom: 25px;
-}
-
-.screenshot {
-	float: left;
-	width: 240px;
-	text-align: center;
-	font-size: 0.7em;
-	color: #222;
-}
-
-.screenshot img {
-	border-radius: 5px 5px 5px 5px;
-    border: 1px solid rgb(170, 170, 170);
-    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.4) inset, 0px 5px 5px rgba(0, 0, 0, 0.2);
+	margin-right: 10px;
 }
 
 .button {
