--- a/PlayTTD-Web/public/css/style.css
+++ b/PlayTTD-Web/public/css/style.css
@@ -1,189 +1,157 @@
-
 body {
-margin: 0;
-margin-bottom: 25px;
-padding: 0;
-background-color: #ddd;
-background-image: url("/images/perldancer-bg.jpg");
-background-repeat: no-repeat;
-background-position: top left;
-
-font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana";
-font-size: 13px;
-color: #333;
+	font: 1em Verdana,sans-serif;
+	background: #c4cdca;
+	margin: 0px;
+	padding: 0px;
 }
 
-h1 {
-font-size: 28px;
-color: #000;
+.header {
+	background: #000;
+	color: white;
+	padding-left: 13%;
+	padding-right: 13%;
+	padding-top: 2px;
+	padding-bottom: 4px;
+	text-align: right;
+	font: 0.7em;
 }
 
-a  {color: #03c}
-a:hover {
-background-color: #03c;
-color: white;
-text-decoration: none;
+.header a {
+	color: #AAA;
+	text-decoration: none;
+	border-bottom: 1px dotted #AAA;
 }
 
-#page {
-background-color: #ddd;
-width: 750px;
-margin: auto;
-margin-left: auto;
-padding-left: 0px;
-margin-right: auto;
+.content-container {
+	background: #000;
+	width: 100%;
 }
 
-#content {
-background-color: white;
-border: 3px solid #aaa;
-border-top: none;
-padding: 25px;
-width: 500px;
+.content {
+	background: #c4cdca url('../images/big_optimal.png') no-repeat right bottom;
+	width: 100%;
 }
 
-#sidebar {
-float: right;
-width: 175px;
+.content .left {
+	background: rgba(196, 205, 202, 0.5);
+	margin-left: 12%;
+	margin-right: 12%;
+	padding: 5px;
 }
 
-#header, #about, #getting-started {
-padding-left: 75px;
-padding-right: 30px;
+.contact-container {
+	background: #000;
+	width: 100%;
+	height: 136px;
+	color: #FFF;
+}
+
+.contact-container a {
+	font-size: 0.9em;
+	text-decoration: none;
+	line-height: 150%;
+	text-decoration: underline;
+	color: #AAA;
+}
+
+.contact-container a:hover {
+	color: #FFF;
+}
+
+.box {
+	padding-left: 12%;
+	padding-right: 12%;
+}
+
+.margin-in-bottom {
+	float: right;
+	margin-top: 27px;
+	height: 50px;
+}
+
+.contact {
+	background:  url('../images/contact.png') no-repeat left center;
+	padding-left: 70px;
+	line-height: 110%;
+}
+
+.copyright {
+	margin-left: 40px;
+	background:  url('../images/copyright.png') no-repeat left center;
+	padding-left: 40px;
+	line-height: 110%;
+	font-size: 0.7em;
+}
+
+.bug {
+	float:left;
+	padding-left: 50px;
+	background:  url('../images/report-bug.png') no-repeat left center;
+}
+
+.head {
+	font-weight: bold;
+	display: block;
 }
 
 
-#header {
-background-image: url("/images/perldancer.jpg");
-background-repeat: no-repeat;
-background-position: top left;
-height: 64px;
-}
-#header h1, #header h2 {margin: 0}
-#header h2 {
-color: #888;
-font-weight: normal;
-font-size: 16px;
+.menu {
+	margin: 40px 40px 40px 40px;
 }
 
-#about h3 {
-margin: 0;
-margin-bottom: 10px;
-font-size: 14px;
+.cover h3 {
+	color: #b31915;
 }
 
-#about-content {
-background-color: #ffd;
-border: 1px solid #fc0;
-margin-left: -11px;
-}
-#about-content table {
-margin-top: 10px;
-margin-bottom: 10px;
-font-size: 11px;
-border-collapse: collapse;
-}
-#about-content td {
-padding: 10px;
-padding-top: 3px;
-padding-bottom: 3px;
-}
-#about-content td.name  {color: #555}
-#about-content td.value {color: #000}
-
-#about-content.failure {
-background-color: #fcc;
-border: 1px solid #f00;
-}
-#about-content.failure p {
-margin: 0;
-padding: 10px;
+.cover-list {
+	padding-top: 10px;
+	padding-bottom: 20px;
 }
 
-#getting-started {
-border-top: 1px solid #ccc;
-margin-top: 25px;
-padding-top: 15px;
-}
-#getting-started h1 {
-margin: 0;
-font-size: 20px;
-}
-#getting-started h2 {
-margin: 0;
-font-size: 14px;
-font-weight: normal;
-color: #333;
-margin-bottom: 25px;
-}
-#getting-started ol {
-margin-left: 0;
-padding-left: 0;
-}
-#getting-started li {
-font-size: 18px;
-color: #888;
-margin-bottom: 25px;
-}
-#getting-started li h2 {
-margin: 0;
-font-weight: normal;
-font-size: 18px;
-color: #333;
-}
-#getting-started li p {
-color: #555;
-font-size: 13px;
+.screenshot {
+	float: right;
+	background: url('http://media.openttd.org/images/screens/0.4.8/desert_junction_thumb.png') no-repeat;
+	width: 240px;
+	height: 184px;
+	text-align: center;
+	font-size: 0.7em;
+	color: #222;
+	border-radius: 5px 5px 5px 5px;
+    border: 1px solid rgb(170, 170, 170);
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.4) inset, 0px 5px 5px rgba(0, 0, 0, 0.2);
+    margin-left: 20px;
 }
 
-#search {
-margin: 0;
-padding-top: 10px;
-padding-bottom: 10px;
-font-size: 11px;
-}
-#search input {
-font-size: 11px;
-margin: 2px;
-}
-#search-text {width: 170px}
-
-#sidebar ul {
-margin-left: 0;
-padding-left: 0;
-}
-#sidebar ul h3 {
-margin-top: 25px;
-font-size: 16px;
-padding-bottom: 10px;
-border-bottom: 1px solid #ccc;
-}
-#sidebar li {
-list-style-type: none;
-}
-#sidebar ul.links li {
-margin-bottom: 5px;
+.controls {
+	padding-top: 5px;
+	font-size: 1.2em;
 }
 
-h1, h2, h3, h4, h5 {
-font-family: sans-serif;
-margin: 1.2em 0 0.6em 0;
+.controls a {
+	margin-right: 10px;
 }
 
-p {
-line-height: 1.5em;
-margin: 1.6em 0;
+.button {
+    font-size: 1em;
+    padding: 7px 20px 7px 20px;
+    background: none repeat scroll 0% 0% rgb(234, 236, 234) !important;
+    color: rgb(34, 34, 34) !important;
+    border-radius: 5px 5px 5px 5px;
+    border: 1px solid rgb(170, 170, 170);
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.4) inset, 0px 1px 1px rgba(0, 0, 0, 0.2);
+    -moz-transition-duration: 0.2s;
+    -moz-user-select: none;
+    cursor: pointer;
+    text-decoration: underline;
+    font-weight: bold;
 }
 
-code, tt {
-    font-family: 'Andale Mono', Monaco, 'Liberation Mono', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', monospace;
+.green {
+	background: none repeat scroll 0% 0% rgb(134, 234, 134) !important;
 }
 
-#footer {
-clear: both;
-padding-top: 2em;
-text-align: center;
-padding-right: 160px;
-font-family: sans-serif;
-font-size: 10px;
+.social {
+	overflow: hidden;
+	width: 170px;
+	padding-top: 7px;
 }
