--- a/PlayTTD-Web/views/layouts/main.tt
+++ b/PlayTTD-Web/views/layouts/main.tt
@@ -1,22 +1,92 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-type" content="text/html; charset=<% settings.charset %>" />
-<title>PlayTTD::Web</title>
-<link rel="stylesheet" href="<% request.uri_base %>/css/style.css" />
+<html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+	<meta http-equiv="Content-type" content="text/html; charset=<% settings.charset %>" />
+    <title>PlayTTD: Transport Tycoon Deluxe game in browser</title>
+    <meta name="description" content="PlayTTD is an open source browser game based upon Transport Tycoon Deluxe." />
+    <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport Tycoon Deluxe,game,browser,online,play" />
+    <meta name="author" content="Guryanov Aleksander" />
+    <link rel="stylesheet" href="<% request.uri_base %>/css/style.css" />
+    <% FOREACH href = css %>
+      <link rel="stylesheet" href="<% request.uri_base %>/<% href %>" />
+    <% END %>
 
-<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript">/* <![CDATA[ */
-    !window.jQuery && document.write('<script type="text/javascript" src="<% request.uri_base %>/javascripts/jquery.js"><\/script>')
-/* ]]> */</script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-32891320-1']);
+      _gaq.push(['_trackPageview']);
 
-</head>
-<body>
-<% content %>
-<div id="footer">
-Powered by <a href="http://perldancer.org/">Dancer</a> <% dancer_version %>
-</div>
-</body>
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+
+    <script type='text/javascript' src='<% request.uri_base %>/javascripts/cookie.js'></script>
+  </head>
+  <body>
+
+  <div class="header">
+    Hello, <span id="player-name"></span> <a href="#">[change]</a>
+  </div>
+  
+  <div class="content-container">
+    <div class="content">
+      <div class="left">
+		<% content %>
+      </div>
+    </div>
+  </div>
+
+  <div class="contact-container">
+    <div class="box">
+      <div class="copyright margin-in-bottom">
+        2012<br/>
+        Guryanov Aleksander<br/><br/>
+        Powered by:<br/>
+        <a href="https://github.com/kripken/emscripten">emscripten</a><br/>
+        <a href="http://www.openttd.org">OpenTTD</a>
+      </div>
+      <div class="contact margin-in-bottom">
+        <span class="head">Contact</span>
+        <a href="mailto:caiiiycuk@gmail.com">caiiiycuk@gmail.com</a>
+        <div class="social">
+          <g:plusone annotation="none"></g:plusone>
+          <a href="https://twitter.com/caiiiycuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a></br>
+          <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
+        </div>
+      </div>
+      <div class="bug margin-in-bottom">
+        <span class="head">Resources</span>
+        <a href="/jukebox/">Jukebox</a><br/>
+        <a href="/performance-test/">Performance test</a><br/>
+        <a href="https://github.com/caiiiycuk/play-ttd/issues">Report a bug</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- THIS -->
+
+  <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function(){
+      document.getElementById('player-name').innerHTML = playerName();
+    }, false);
+  </script>
+
+  <!-- GOOGLE -->
+
+  <script type="text/javascript">
+    (function() {
+      var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+      po.src = 'https://apis.google.com/js/plusone.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    })();
+  </script>
+
+  <!-- TWITTER -->
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
+
+  </body>
 </html>
