--- a/PlayTTD-Web/views/jukebox.tt
+++ b/PlayTTD-Web/views/jukebox.tt
@@ -15,112 +15,112 @@
 				{
 					title:"Tycoon DELUXE Theme",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt00.ogg",
+					oga: "/gm/gm_tt00.ogg",
 				},
 				{
 					title:"Snarl Up",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt01.ogg",
+					oga: "/gm/gm_tt01.ogg",
 				},
 				{
 					title:"Easy Driver",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt02.ogg",
+					oga: "/gm/gm_tt02.ogg",
 				},
 				{
 					title:"Little Red Diesel",
 					artist:"John Broomhall/RichNagel",
-					oga: "http://play-ttd.com/gm/gm_tt03.ogg",
+					oga: "/gm/gm_tt03.ogg",
 				},
 				{
 					title:"City Groove",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt04.ogg",
+					oga: "/gm/gm_tt04.ogg",
 				},
 				{
 					title:"Aliens Ate My Railway",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt05.ogg",
+					oga: "/gm/gm_tt05.ogg",
 				},
 				{
 					title:"Stoke It",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt06.ogg",
+					oga: "/gm/gm_tt06.ogg",
 				},
 				{
 					title:"Don't Walk!",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt07.ogg",
+					oga: "/gm/gm_tt07.ogg",
 				},
 				{
 					title:"Sawyer's Tune",
 					artist:"John Broomhall/RichNagel",
-					oga: "http://play-ttd.com/gm/gm_tt08.ogg",
+					oga: "/gm/gm_tt08.ogg",
 				},
 				{
 					title:"Fell Apart On Me",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt09.ogg",
+					oga: "/gm/gm_tt09.ogg",
 				},
 				{
 					title:"Can't Get There From Here",
 					artist:"John Broomhall/RichNagel",
-					oga: "http://play-ttd.com/gm/gm_tt10.ogg",
+					oga: "/gm/gm_tt10.ogg",
 				},
 				{
 					title:"Hard Drivin'",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt11.ogg",
+					oga: "/gm/gm_tt11.ogg",
 				},
 				{
 					title:"Road Hog",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt12.ogg",
+					oga: "/gm/gm_tt12.ogg",
 				},
 				{
 					title:"Hold That Train!",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt13.ogg",
+					oga: "/gm/gm_tt13.ogg",
 				},
 				{
 					title:"Broomer's Oil Rag",
 					artist:"John Broomhall/RichNagel",
-					oga: "http://play-ttd.com/gm/gm_tt14.ogg",
+					oga: "/gm/gm_tt14.ogg",
 				},
 				{
 					title:"Goss Groove",
 					artist:"John Broomhall/RichNagel",
-					oga: "http://play-ttd.com/gm/gm_tt15.ogg",
+					oga: "/gm/gm_tt15.ogg",
 				},
 				{
 					title:"Small Town",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt16.ogg",
+					oga: "/gm/gm_tt16.ogg",
 				},
 				{
 					title:"Cruise Control",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt17.ogg",
+					oga: "/gm/gm_tt17.ogg",
 				},
 				{
 					title:"Stroll On",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt18.ogg",
+					oga: "/gm/gm_tt18.ogg",
 				},
 				{
 					title:"Funk Central",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt19.ogg",
+					oga: "/gm/gm_tt19.ogg",
 				},
 				{
 					title:"Jammit",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt20.ogg",
+					oga: "/gm/gm_tt20.ogg",
 				},
 				{
 					title:"Movin' On",
 					artist:"John Broomhall",
-					oga: "http://play-ttd.com/gm/gm_tt21.ogg",
+					oga: "/gm/gm_tt21.ogg",
 				},
 			], {
 				supplied: "oga",
