--- a/PlayTTD-Web/views/layouts/empty.tt
+++ b/PlayTTD-Web/views/layouts/empty.tt
@@ -7,6 +7,7 @@
     <meta name="description" content="PlayTTD is an open source browser game based upon Transport Tycoon Deluxe." />
     <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport Tycoon Deluxe,game,browser,online,play" />
     <meta name="author" content="Guryanov Aleksander" />
+    <link rel="icon" type="image/ico" href="/favicon.ico" />
     <link rel="stylesheet" href="<% request.uri_base %>/css/primal_style.css" />
 
     <script type="text/javascript">
