--- a/PlayTTD-Web/public/css/style.css
+++ b/PlayTTD-Web/public/css/style.css
@@ -155,3 +155,49 @@ body {
 	width: 170px;
 	padding-top: 7px;
 }
+
+.form {
+	margin: 20px;
+}
+
+.form a.customize {
+	color: #555;
+}
+
+.form .error {
+	background: #FAA;
+	text-align: center;
+	padding: 5px;
+	border: 1px solid #AAA;
+	border-radius: 5px;
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.4) inset, 0px 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.form label {
+	font-size: 1em;
+}
+
+.form input {
+	margin: 5px 5px 15px 15px;
+	border-radius: 3px;
+	border: 1px solid #ada9a5;
+	padding: 4px;
+	box-shadow: inset 0 0 3px #f1f0ef;
+	outline: none;
+	font-size: 1em;
+}
+
+.form input[type="text"],
+.form input[type="password"] {
+	display: block;
+	width: 250px;
+}
+
+.form input:focus {
+	border: 1px solid #cd5728;
+	box-shadow: inset 0 0 3px #ffcfbc;
+}
+
+.form div {
+	margin: 50px 5px 5px 5px;
+}
